objects/SFGA__Keyword__c.object
<CustomObject>
    <fields>
        <fullName>SFGA__Keyword_ID__c</fullName>
        <description>Unique Identifier of the Keyword</description>
        <label>Keyword ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N40000001Hgh9EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFGA__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N40000001HghAEAS</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>